--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,15 +3,16 @@ name: Run tests
 on: [push]
 
 jobs:
-	tests:
-		name: Run tests
-		runs-on: ubuntu-latest
-		steps:
-			- name: Checkout the code
-			  uses: actions/checkout@v1
+  tests:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v1
 
-			- name: Run tests
-			  uses: actions/setup-go@v1
-			  with:
-				  go-version: '1.13'
-			- run: make test
+      - name: Run tests
+        uses: actions/setup-go@v1
+        with:
+          go-version: '1.13'
+
+      - run: go test ./...
